--- a/video.html
+++ b/video.html
@@ -10,7 +10,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background-color: white;
+      background-color: aqua;
     }
     #videoContainer {
       position: relative;
