--- a/video.html
+++ b/video.html
@@ -40,7 +40,7 @@
       <source src="videoforar.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
-    <button id="actionButton">Click Me</button>
+    <button id="actionButton">Shake Off</button>
   </div>
 
   <script>
