--- a/video.html
+++ b/video.html
@@ -16,8 +16,8 @@
       position: relative;
     }
     #videoElement {
-      width: 100%;
-      height: auto;
+      width: auto;
+      height: 100%;
     }
     #actionButton {
       display: none;
