--- a/video.html
+++ b/video.html
@@ -36,8 +36,8 @@
 </head>
 <body>
   <div id="videoContainer">
-    <video id="videoElement" autoplay loop>
-      <source src="./videofile/videoforar.mp4" type="video/mp4">
+    <video id="videoElement" width="320" height="240" controls>
+      <source src="./videoforar.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <!-- <button id="actionButton">Shake Off</button> -->
