--- a/video.html
+++ b/video.html
@@ -40,10 +40,10 @@
       <source src="./videoforar.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
-    <!-- <button id="actionButton">Shake Off</button> -->
+    <button id="actionButton">Shake Off</button>
   </div>
 
-  <!-- <script>
+  <script>
     const video = document.getElementById('videoElement');
     const button = document.getElementById('actionButton');
 
@@ -64,6 +64,6 @@
     button.addEventListener('click', () => {
       alert('Button clicked!');
     });
-  </script> -->
+  </script>
 </body>
 </html>
