--- a/video.html
+++ b/video.html
@@ -36,7 +36,7 @@
 </head>
 <body>
   <div id="videoContainer">
-    <video id="videoElement" width="320" height="240" autoplay loop>
+    <video id="videoElement" width="640" height="480" autoplay>
       <source src="./videoforar.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
