--- a/video.html
+++ b/video.html
@@ -42,7 +42,6 @@
     </video>
     <button id="actionButton">Shake Off</button>
   </div>
-
   <script>
     const video = document.getElementById('videoElement');
     const button = document.getElementById('actionButton');
@@ -62,7 +61,7 @@
 
     // Handle button click
     button.addEventListener('click', () => {
-      alert('Button clicked!');
+      window.location.href = 'glbloader.html';
     });
   </script>
 </body>
