--- a/glbloader.html
+++ b/glbloader.html
@@ -33,7 +33,7 @@
 
           const loader = new THREE.GLTFLoader();
           loader.load(
-            'BoomBox.glb', // Path to your GLB file
+            './BoomBox.glb', // Path to your GLB file
             function (gltf) {
               scene.add(gltf.scene);
               animate();
@@ -62,7 +62,6 @@
           camera.updateProjectionMatrix();
           renderer.setSize(window.innerWidth, window.innerHeight);
         });
-
         init();
     </script>
 </body>
