--- a/video.html
+++ b/video.html
@@ -84,6 +84,7 @@
 
     // Handle button click
     button.addEventListener('click', () => {
+      console.log('Button clicked');
       // Hide video and button
       video.style.display = 'none';
       button.style.display = 'none';
@@ -95,6 +96,16 @@
 
     // Initially hide the 3D model
     model.setAttribute('visible', 'false');
+
+    // Debugging: log when model is loaded
+    model.addEventListener('model-loaded', () => {
+      console.log('3D model loaded successfully');
+    });
+
+    // Debugging: check for errors
+    model.addEventListener('error', (e) => {
+      console.error('Error loading 3D model', e);
+    });
   </script>
 </body>
 </html>
