--- a/video.html
+++ b/video.html
@@ -57,7 +57,7 @@
   <div id="arContainer">
     <a-scene embedded arjs>
       <a-marker preset="hiro">
-        <a-entity id="3d-model" gltf-model="./BoomBox.glb" scale="0.1 0.1 0.1"></a-entity>
+        <a-entity id="3d-model" gltf-model="BoomBox.glb" scale="0.1 0.1 0.1"></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
