--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
   <title>WebAR Example</title>
@@ -19,5 +19,22 @@
       window.location.href = 'video.html';
     });
   </script>
+</body>
+</html> -->
+<!DOCTYPE html>
+<html>
+<head>
+  <title>WebAR Example</title>
+  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.5/aframe/build/aframe-ar.js"></script>
+</head>
+<body style="margin: 0; overflow: hidden;">
+  <a-scene embedded arjs='sourceType: webcam;'>
+    <a-marker preset="hiro">
+      <a-entity gltf-model="./BoomBox.glb" scale="0.1 0.1 0.1" position="0 0 0"></a-entity>
+      <a-entity camera></a-entity>
+    </a-marker>
+    <a-entity camera></a-entity>
+  </a-scene>
 </body>
 </html>
