--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </script>
 </body>
 </html> -->
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
   <title>WebAR Example</title>
@@ -31,10 +31,29 @@
 <body style="margin: 0; overflow: hidden;">
   <a-scene embedded arjs='sourceType: webcam;'>
     <a-marker preset="hiro">
-      <a-entity gltf-model="./BoomBox.glb" scale="1 1 1" position="0 0 0"></a-entity>
+      <a-entity gltf-model="./BoomBox.glb" scale="0.01 0.01 0.01" position="0 0 0"></a-entity>
       <a-entity camera></a-entity>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AR.js Marker Detection</title>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.min.js"></script>
+</head>
+<body style="margin: 0; overflow: hidden;">
+    <a-scene embedded arjs>
+        <a-marker preset="hiro">
+            <a-box position="0 0.5 0" material="color: yellow;"></a-box>
+        </a-marker>
+        <a-entity camera></a-entity>
+    </a-scene>
 </body>
 </html>
