--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 <body style="margin: 0; overflow: hidden;">
     <a-scene embedded arjs>
         <a-marker preset="hiro">
-            <a-box position="0 0.5 0" material="color: yellow;"></a-box>
+          <a-gltf-model src="./BoomBox.glb" scale="0.5 0.5 0.5" position="0 0 0"></a-gltf-model>
+            <!-- <a-box position="0 0.5 0" material="color: yellow;"></a-box> -->
         </a-marker>
         <a-entity camera></a-entity>
     </a-scene>
