--- a/index.html
+++ b/index.html
@@ -1,60 +1,23 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <title>WebAR Example</title>
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.5/aframe/build/aframe-ar.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.js"></script>
 </head>
 <body style="margin: 0; overflow: hidden;">
   <a-scene embedded arjs>
     <a-marker preset="hiro">
+      <a-gltf-model src="./BoomBox.glb" scale="0.5 0.5 0.5" position="0 0 0"></a-gltf-model>
       <a-box position="0 0.5 0" material="color: red;"></a-box>
-      <a-entity camera></a-entity>
     </a-marker>
+    <a-entity camera></a-entity>
   </a-scene>
-
   <script>
     // JavaScript to handle marker detection and navigation to another page
     document.querySelector('a-marker').addEventListener('markerFound', () => {
       window.location.href = 'video.html';
     });
   </script>
-</body>
-</html> -->
-<!-- <!DOCTYPE html>
-<html>
-<head>
-  <title>WebAR Example</title>
-  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.5/aframe/build/aframe-ar.js"></script>
-</head>
-<body style="margin: 0; overflow: hidden;">
-  <a-scene embedded arjs='sourceType: webcam;'>
-    <a-marker preset="hiro">
-      <a-entity gltf-model="./BoomBox.glb" scale="0.01 0.01 0.01" position="0 0 0"></a-entity>
-      <a-entity camera></a-entity>
-    </a-marker>
-    <a-entity camera></a-entity>
-  </a-scene>
-</body>
-</html> -->
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AR.js Marker Detection</title>
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-</head>
-<body style="margin: 0; overflow: hidden;">
-    <a-scene embedded arjs>
-        <a-marker preset="hiro">
-          <a-gltf-model src="./BoomBox.glb" scale="0.5 0.5 0.5" position="0 0 0"></a-gltf-model>
-            <!-- <a-box position="0 0.5 0" material="color: yellow;"></a-box> -->
-        </a-marker>
-        <a-entity camera></a-entity>
-    </a-scene>
 </body>
 </html>
