--- a/video.html
+++ b/video.html
@@ -14,10 +14,13 @@
     }
     #videoContainer {
       position: relative;
+      width: 100%;
+      height: 100%;
     }
     #videoElement {
-      width: auto;
+      width: 100%;
       height: 100%;
+      object-fit: cover;
     }
     #actionButton {
       display: none;
@@ -40,24 +43,22 @@
       left: 0;
       width: 100vw;
       height: 100vh;
-      z-index: 3; /* Ensure AR scene is on top */
+      z-index: 1; /* Ensure AR scene is on top */
     }
   </style>
 </head>
 <body>
   <div id="videoContainer">
-    <video id="videoElement" width="640" height="480" autoplay muted>
+    <video id="videoElement" autoplay muted>
       <source src="./videoforar.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <button id="actionButton">Shake Off</button>
   </div>
-
-  <!-- A-Frame Scene for AR -->
   <div id="arContainer">
     <a-scene embedded arjs>
       <a-marker preset="hiro">
-        <a-entity id="3d-model" gltf-model="BoomBox.glb" scale="0.1 0.1 0.1"></a-entity>
+        <a-entity id="3d-model" gltf-model="./BoomBox.glb" scale="0.1 0.1 0.1"></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
