--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <a-scene embedded arjs>
     <a-marker preset="hiro">
       <a-gltf-model src="./BoomBox.glb" scale="0.5 0.5 0.5" position="0 0 0"></a-gltf-model>
-      <a-box position="0 0.5 0" material="color: red;"></a-box>
-      <a-video src="./videoforar.mp4" width="2" height="1.5" position="0 0.5 0"></a-video>
+      <!-- <a-box position="0 0.5 0" material="color: red;"></a-box> -->
+      <a-video src="path/to/your/video.mp4" width="16" height="9" position="0 0 0" autoplay="true" loop="true"></a-video>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
