--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a-marker preset="hiro">
       <a-gltf-model src="./BoomBox.glb" scale="0.5 0.5 0.5" position="0 0 0"></a-gltf-model>
       <!-- <a-box position="0 0.5 0" material="color: red;"></a-box> -->
-      <a-video src="path/to/your/video.mp4" width="16" height="9" position="0 0 0" autoplay="true" loop="true"></a-video>
+      <a-video src="./videoforar.mp4" width="16" height="9" position="0 0 0" autoplay="true" loop="true"></a-video>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
