--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
     <button id="shake-off-button">SHAKE OFF</button>
 
-    <a-scene embedded arjs>
+    <a-scene embedded arjs='sourceType: webcam;'>
         <a-marker preset="hiro">
             <!-- GLB Model -->
             <a-gltf-model id="model" src="./BoomBox.glb" scale="0.5 0.5 0.5" position="0 0 0" visible="false"></a-gltf-model>
