--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </head>
 <body>
     <div id="video-container">
-        <video id="video" autoplay loop>
+        <video id="video" autoplay loop muted>
             <source src="./videoforar.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
@@ -78,7 +78,7 @@
         </a-marker>
         
         <!-- Camera -->
-        <a-entity camera position="0 0 10"></a-entity>
+        <a-entity camera position="0 0 5"></a-entity>
     </a-scene>
 
     <script>
