--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
 <body>
-    <div id="video-container">
+    <!-- <div id="video-container">
         <video id="video" autoplay loop muted>
             <source src="./videoforar.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-    </div>
+    </div> -->
 
     <button id="shake-off-button">SHAKE OFF</button>
 
@@ -77,7 +77,7 @@
         <a-entity camera position="0 0 5"></a-entity>
     </a-scene>
 
-    <script>
+    <!-- <script>
         // Handle the 'SHAKE OFF' button click event
         document.getElementById('shake-off-button').addEventListener('click', function() {
             console.log('Shake Off button clicked');
@@ -103,6 +103,6 @@
             document.getElementById('shake-off-button').style.display = 'none';
             document.getElementById('model').setAttribute('visible', 'false');
         });
-    </script>
+    </script> -->
 </body>
 </html>
