--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AR.js Marker Detection with Fullscreen Responsive Video</title>
-    <style>
+    <!-- <style>
         body {
             margin: 0;
             overflow: hidden;
@@ -53,7 +53,7 @@
             height: 100%;
             z-index: 0;
         }
-    </style>
+    </style> -->
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
