--- a/index.html
+++ b/index.html
@@ -1,18 +1,108 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>WebAR Example</title>
-  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AR.js Marker Detection with Fullscreen Responsive Video</title>
+    <!-- <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #000;
+        }
+        #video-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 1;
+            display: none;
+        }
+        #video-container video {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain;
+        }
+        #shake-off-button {
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            padding: 10px 20px;
+            font-size: 20px;
+            background-color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            z-index: 2;
+            display: none;
+        }
+        a-scene {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 0;
+        }
+    </style> -->
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
 <body style="margin: 0; overflow: hidden;">
-  <a-scene embedded arjs>
-    <a-marker preset="hiro">
-      <a-gltf-model src="./BoomBox.glb" scale="0.5 0.5 0.5" position="0 0 0"></a-gltf-model>
-      <!-- <a-box position="0 0.5 0" material="color: red;"></a-box> -->
-      <a-video src="./videoforar.mp4" width="16" height="9" position="0 0 0" autoplay="true" loop="true"></a-video>
-    </a-marker>
-    <a-entity camera></a-entity>
-  </a-scene>
+    <!-- <div id="video-container">
+        <video id="video" autoplay loop muted>
+            <source src="./videoforar.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div> -->
+
+    <button id="shake-off-button">SHAKE OFF</button>
+
+    <a-scene embedded arjs='sourceType: webcam;'>
+        <a-marker preset="hiro">
+            <!-- GLB Model -->
+            <a-gltf-model id="model" src="./BoomBox.glb" scale="1 1 1" position="0 0 0" rotation="0 0 0" visible="false"></a-gltf-model>
+        </a-marker>
+        
+        <!-- Camera -->
+        <a-entity camera ></a-entity>
+    </a-scene>
+
+    <!-- <script>
+        // Handle the 'SHAKE OFF' button click event
+        document.getElementById('shake-off-button').addEventListener('click', function() {
+            console.log('Shake Off button clicked');
+            document.getElementById('video-container').style.display = 'none';
+            document.getElementById('video').pause();
+            document.getElementById('shake-off-button').style.display = 'none';
+            document.getElementById('model').setAttribute('visible', 'true');
+        });
+
+        // Show the video when marker is detected
+        document.addEventListener('arjs-marker-found', function(ev){
+            console.log('Marker found');
+            document.getElementById('video-container').style.display = 'flex';
+            document.getElementById('video').play();
+            document.getElementById('shake-off-button').style.display = 'block';
+        });
+
+        // Hide the video and button when marker is lost
+        document.addEventListener('arjs-marker-lost', function(ev){
+            console.log('Marker lost');
+            document.getElementById('video-container').style.display = 'none';
+            document.getElementById('video').pause();
+            document.getElementById('shake-off-button').style.display = 'none';
+            document.getElementById('model').setAttribute('visible', 'false');
+        });
+    </script> -->
 </body>
 </html>
