--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <button id="shake-off-button">SHAKE OFF</button>
 
-    <a-scene embedded arjs='sourceType: webcam;'>
+    <a-scene embedded arjs>
         <a-marker preset="hiro">
             <!-- GLB Model -->
             <a-gltf-model id="model" src="./BoomBox.glb" scale="1 1 1" position="0 0 0" rotation="0 0 0" visible="false"></a-gltf-model>
