--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <a-scene embedded arjs>
         <a-marker preset="hiro">
             <!-- GLB Model -->
-            <a-gltf-model id="model" src="./BoomBox.glb" scale="1 1 1" position="0 0 0" rotation="0 0 0" visible="false"></a-gltf-model>
+            <a-gltf-model id="model" src="./BoomBox.glb" scale="1 1 1" position="0 0.5 0" rotation="0 0 0"></a-gltf-model>
         </a-marker>
         
         <!-- Camera -->
