--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AR.js Marker Detection with Fullscreen Responsive Video</title>
-    <!-- <style>
+     <style>
         body {
             margin: 0;
             overflow: hidden;
@@ -53,17 +53,17 @@
             height: 100%;
             z-index: 0;
         }
-    </style> -->
+    </style> 
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
 <body style="margin: 0; overflow: hidden;">
-    <!-- <div id="video-container">
+    <div id="video-container">
         <video id="video" autoplay loop muted>
             <source src="./videoforar.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-    </div> -->
+    </div> 
 
     <!-- <button id="shake-off-button">SHAKE OFF</button> -->
 
@@ -77,7 +77,7 @@
         <a-entity camera ></a-entity>
     </a-scene>
 
-    <!-- <script>
+     <script>
         // Handle the 'SHAKE OFF' button click event
         document.getElementById('shake-off-button').addEventListener('click', function() {
             console.log('Shake Off button clicked');
@@ -103,6 +103,6 @@
             document.getElementById('shake-off-button').style.display = 'none';
             document.getElementById('model').setAttribute('visible', 'false');
         });
-    </script> -->
+    </script> 
 </body>
 </html>
