--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </video>
     </div> 
 
-    <!-- <button id="shake-off-button">SHAKE OFF</button> -->
+    <button id="shake-off-button">SHAKE OFF</button>
 
     <a-scene embedded arjs>
         <a-marker preset="hiro">
