--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <div id="video-container">
-        <video id="video" autoplay loop muted playsinline>
+        <video id="video" autoplay loop playsinline>
             <source src="./videoforar.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
