--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            z-index: 1;
+            z-index: 2; /* Ensure this is higher than the AR scene */
             display: none;
         }
         #video-container video {
-            max-width: 100%;
-            max-height: 100%;
+            width: 100%;
+            height: 100%;
             object-fit: contain;
         }
         a-scene {
@@ -37,7 +37,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            z-index: 0;
+            z-index: 1;
         }
     </style> 
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
@@ -45,7 +45,7 @@
 </head>
 <body>
     <div id="video-container">
-        <video id="video" autoplay loop playsinline>
+        <video id="video" autoplay loop muted playsinline>
             <source src="./videoforar.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
