--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AR.js Marker Detection with Fullscreen Responsive Video</title>
-     <style>
+    <style>
         body {
             margin: 0;
             overflow: hidden;
@@ -39,7 +39,7 @@
             height: 100%;
             z-index: 1;
         }
-    </style> 
+    </style>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
@@ -49,7 +49,7 @@
             <source src="./videoforar.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-    </div> 
+    </div>
 
     <a-scene embedded arjs>
         <a-marker preset="hiro">
@@ -64,9 +64,12 @@
         // Show the video when marker is detected
         document.addEventListener('arjs-marker-found', function(ev){
             console.log('Marker found');
-            document.getElementById('video-container').style.display = 'flex';
+            var videoContainer = document.getElementById('video-container');
             var video = document.getElementById('video');
-            video.play().catch(error => {
+            videoContainer.style.display = 'flex';
+            video.play().then(() => {
+                console.log('Video playing');
+            }).catch(error => {
                 console.error('Error trying to play the video:', error);
             });
         });
@@ -74,9 +77,22 @@
         // Hide the video when marker is lost
         document.addEventListener('arjs-marker-lost', function(ev){
             console.log('Marker lost');
-            document.getElementById('video-container').style.display = 'none';
-            document.getElementById('video').pause();
+            var videoContainer = document.getElementById('video-container');
+            var video = document.getElementById('video');
+            videoContainer.style.display = 'none';
+            video.pause();
         });
-    </script> 
+
+        // Additional logging for debugging
+        window.onload = function() {
+            console.log('Page loaded');
+        };
+        document.getElementById('video').addEventListener('playing', function() {
+            console.log('Video is playing');
+        });
+        document.getElementById('video').addEventListener('pause', function() {
+            console.log('Video is paused');
+        });
+    </script>
 </body>
 </html>
