--- a/index.html
+++ b/index.html
@@ -3,95 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AR.js Marker Detection with Fullscreen Responsive Video</title>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #000;
-        }
-        #video-container {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 2; /* Ensure this is higher than the AR scene */
-            display: none;
-        }
-        #video-container video {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-        }
-        a-scene {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: 1;
-        }
-    </style>
+    <title>WebAR Example</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.2/aframe/build/aframe-ar-nft.min.js"></script>
 </head>
-<body>
-    <div id="video-container">
-        <video id="video" autoplay loop controls inline>
-            <source src="./videoforar.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    </div>
-
-    <a-scene embedded arjs>
-        <a-marker preset="hiro">
-            <!-- No 3D Model -->
+<body style="margin: 0; overflow: hidden;">
+    <a-scene embedded arjs='sourceType: webcam;'>
+        <a-marker type='pattern' url='https://raw.githubusercontent.com/AR-js-org/AR.js/master/data/data/patt.hiro' emitevents='true'>
+            <a-box position='0 0.5 0' material='color: yellow;'></a-box>
         </a-marker>
-        
-        <!-- Camera -->
         <a-entity camera></a-entity>
     </a-scene>
 
     <script>
-        // Show the video when marker is detected
-        document.addEventListener('arjs-marker-found', function(ev){
-            console.log('Marker found');
-            var videoContainer = document.getElementById('video-container');
-            var video = document.getElementById('video');
-            videoContainer.style.display = 'flex';
-            video.play().then(() => {
-                console.log('Video playing');
-            }).catch(error => {
-                console.error('Error trying to play the video:', error);
-            });
-        });
-
-        // Hide the video when marker is lost
-        document.addEventListener('arjs-marker-lost', function(ev){
-            console.log('Marker lost');
-            var videoContainer = document.getElementById('video-container');
-            var video = document.getElementById('video');
-            videoContainer.style.display = 'none';
-            video.pause();
-        });
-
-        // Additional logging for debugging
-        window.onload = function() {
-            console.log('Page loaded');
-        };
-        document.getElementById('video').addEventListener('playing', function() {
-            console.log('Video is playing');
-        });
-        document.getElementById('video').addEventListener('pause', function() {
-            console.log('Video is paused');
+        document.querySelector('a-marker').addEventListener('markerFound', (e) => {
+            window.location.href = "video.html";
         });
     </script>
 </body>
