--- a/video.html
+++ b/video.html
@@ -19,7 +19,7 @@
     </style>
 </head>
 <body style="margin: 0; display: flex; justify-content: center; align-items: center; height: 100vh; background-color: black; position: relative;">
-    <video id="videoPlayer" width="80%" controls autoplay>
+    <video id="videoPlayer" width="80%" controls autoplay muted>
         <source src="./videoforar.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
@@ -28,6 +28,14 @@
     <script>
         const video = document.getElementById('videoPlayer');
         const button = document.getElementById('shakeOffButton');
+
+        // Try to play the video automatically
+        video.play().then(() => {
+            // Video started playing, unmute it
+            video.muted = false;
+        }).catch((error) => {
+            console.log("Autoplay was prevented. Click to start the video.");
+        });
 
         video.addEventListener('play', () => {
             setTimeout(() => {
