--- a/video.html
+++ b/video.html
@@ -29,16 +29,17 @@
         const video = document.getElementById('videoPlayer');
         const button = document.getElementById('shakeOffButton');
 
-        // Try to play the video automatically
+        // Ensure the video is playing automatically
         video.play().then(() => {
-            // Video started playing, unmute it
-            video.muted = false;
+            console.log("Video is playing automatically.");
         }).catch((error) => {
-            console.log("Autoplay was prevented. Click to start the video.");
+            console.error("Autoplay was prevented.", error);
         });
 
+        // Unmute the video after it starts playing
         video.addEventListener('play', () => {
             setTimeout(() => {
+                video.muted = false;
                 button.style.display = 'block';
             }, 2000); // 2000 milliseconds = 2 seconds
         });
