--- a/video.html
+++ b/video.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Page</title>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <style>
         #shakeOffButton {
             display: none;
@@ -16,6 +17,14 @@
             font-size: 16px;
             cursor: pointer;
         }
+        #sceneContainer {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: none;
+        }
     </style>
 </head>
 <body style="margin: 0; display: flex; justify-content: center; align-items: center; height: 100vh; background-color: black; position: relative;">
@@ -24,10 +33,18 @@
         Your browser does not support the video tag.
     </video>
     <button id="shakeOffButton">Shake Off</button>
+    <div id="sceneContainer">
+        <a-scene embedded>
+            <a-box position="0 1.5 -5" rotation="0 45 0" color="yellow" visible="false" id="myBox"></a-box>
+            <a-camera></a-camera>
+        </a-scene>
+    </div>
 
     <script>
         const video = document.getElementById('videoPlayer');
         const button = document.getElementById('shakeOffButton');
+        const sceneContainer = document.getElementById('sceneContainer');
+        const box = document.getElementById('myBox');
 
         // Ensure the video is playing automatically
         video.play().then(() => {
@@ -42,6 +59,12 @@
                 video.muted = false;
                 button.style.display = 'block';
             }, 2000); // 2000 milliseconds = 2 seconds
+        });
+
+        // Show the 3D object when the button is clicked
+        button.addEventListener('click', () => {
+            sceneContainer.style.display = 'block';
+            box.setAttribute('visible', 'true');
         });
     </script>
 </body>
