--- a/video.html
+++ b/video.html
@@ -36,9 +36,9 @@
     <div id="sceneContainer">
         <a-scene embedded>
             <a-assets>
-                <a-asset-item id="houseModel" src="./House webAR.glb"></a-asset-item>
+                <a-asset-item id="houseModel" src="./House webAR.glb"  scale></a-asset-item>
             </a-assets>
-            <a-gltf-model src="#houseModel" position="0 0 -5" rotation="0 45 0" visible="false" id="myModel"></a-gltf-model>
+            <a-gltf-model src="#houseModel" position="0 0 -5" rotation="0 45 0" scale="2 2 2" visible="false" id="myModel"></a-gltf-model>
             <a-camera></a-camera>
         </a-scene>
     </div>
