--- a/video.html
+++ b/video.html
@@ -17,6 +17,15 @@
             font-size: 16px;
             cursor: pointer;
         }
+        #videoContainer {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 80%;
+            height: auto;
+            position: relative;
+            background-color: black;
+        }
         #sceneContainer {
             position: absolute;
             top: 0;
@@ -28,15 +37,17 @@
     </style>
 </head>
 <body style="margin: 0; display: flex; justify-content: center; align-items: center; height: 100vh; background-color: black; position: relative;">
-    <video id="videoPlayer" width="80%" controls autoplay muted>
-        <source src="./videoforar.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-    <button id="shakeOffButton">Shake Off</button>
+    <div id="videoContainer">
+        <video id="videoPlayer" width="100%" controls autoplay muted>
+            <source src="./videoforar.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <button id="shakeOffButton">Shake Off</button>
+    </div>
     <div id="sceneContainer">
         <a-scene embedded>
             <a-assets>
-                <a-asset-item id="houseModel" src="./House webAR.glb"  scale></a-asset-item>
+                <a-asset-item id="houseModel" src="./House webAR.glb"></a-asset-item>
             </a-assets>
             <a-gltf-model src="#houseModel" position="0 0 -5" rotation="0 45 0" scale="5 5 5" visible="false" id="myModel"></a-gltf-model>
             <a-camera></a-camera>
