--- a/video.html
+++ b/video.html
@@ -16,6 +16,7 @@
             padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
+            z-index: 2; /* Ensure button is above other elements */
         }
         #videoContainer {
             display: flex;
@@ -25,6 +26,7 @@
             height: auto;
             position: relative;
             background-color: black;
+            z-index: 1; /* Ensure video container is below the button */
         }
         #sceneContainer {
             position: absolute;
@@ -33,6 +35,7 @@
             width: 100%;
             height: 100%;
             display: none;
+            z-index: 0; /* Ensure scene container is below other elements */
         }
     </style>
 </head>
@@ -59,6 +62,7 @@
         const button = document.getElementById('shakeOffButton');
         const sceneContainer = document.getElementById('sceneContainer');
         const model = document.getElementById('myModel');
+        const videoContainer = document.getElementById('videoContainer');
 
         // Ensure the video is playing automatically
         video.play().then(() => {
@@ -75,10 +79,11 @@
             }, 2000); // 2000 milliseconds = 2 seconds
         });
 
-        // Show the 3D object when the button is clicked
+        // Show the 3D object and hide the video when the button is clicked
         button.addEventListener('click', () => {
             sceneContainer.style.display = 'block';
             model.setAttribute('visible', 'true');
+            videoContainer.style.display = 'none';
         });
     </script>
 </body>
