--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
     <title>WebAR Example</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.2/aframe/build/aframe-ar-nft.min.js"></script>
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+        }
+    </style>
 </head>
-<body style="margin: 0; overflow: hidden;">
+<body>
     <a-scene embedded arjs='sourceType: webcam;'>
-        <a-marker type='pattern' url='https://raw.githubusercontent.com/AR-js-org/AR.js/master/data/data/patt.hiro' emitevents='true'>
-            <a-box position='0 0.5 0' material='color: yellow;'></a-box>
+        <a-marker type="pattern" url="https://raw.githubusercontent.com/AR-js-org/AR.js/master/data/data/patt.hiro" emitevents="true">
+            <a-gltf-model src="https://cdn.aframe.io/examples/showcase/vr-mode/archemodels/scene.gltf" scale="0.5 0.5 0.5" position="0 0 0" rotation="0 0 0"></a-gltf-model>
         </a-marker>
         <a-entity camera></a-entity>
     </a-scene>
 
     <script>
-        document.querySelector('a-marker').addEventListener('markerFound', (e) => {
-            window.location.href = "video.html";
-        });
     </script>
 </body>
 </html>
