--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
 <body>
     <a-scene embedded arjs='sourceType: webcam;'>
         <a-marker type="pattern" url="https://raw.githubusercontent.com/AR-js-org/AR.js/master/data/data/patt.hiro" emitevents="true">
-            <a-gltf-model src="https://cdn.aframe.io/examples/showcase/vr-mode/archemodels/scene.gltf" scale="0.5 0.5 0.5" position="0 0 0" rotation="0 0 0"></a-gltf-model>
+            <a-gltf-model src="./House webAR.glb" scale="5 5 5" position="0 0 0" rotation="0 0 0"></a-gltf-model>
         </a-marker>
         <a-entity camera></a-entity>
     </a-scene>
-
     <script>
     </script>
 </body>
