--- a/index.html
+++ b/index.html
@@ -3,25 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebAR Example</title>
+    <title>WebAR and Video Example</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.2/aframe/build/aframe-ar-nft.min.js"></script>
     <style>
         body {
             margin: 0;
             overflow: hidden;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            align-items: center;
+            height: 100vh;
+        }
+        #videoContainer, #arContainer {
+            width: 45%;
+            height: 80%;
+            position: relative;
+        }
+        #videoContainer video {
+            width: 100%;
+            height: 100%;
         }
     </style>
 </head>
 <body>
-    <a-scene embedded arjs='sourceType: webcam;'>
-        <a-marker type="pattern" url="https://raw.githubusercontent.com/AR-js-org/AR.js/master/data/data/patt.hiro" emitevents="true">
-            <a-video src="#my-video" width="1" height="0.5625" position="0 1 0" rotation="0 0 0"></a-video>
-            <a-gltf-model src="./House webAR.glb" scale="0.1 0.1 0.1" position="0 0 -5" rotation="0 0 0"></a-gltf-model>
-        </a-marker>
-        <a-entity camera></a-entity>
-    </a-scene>
-    <video id="my-video" src="./videoforar.mp4" style="display: none;"></video>
+    <div id="videoContainer">
+        <video id="my-video" src="./videoforar.mp4" controls autoplay muted></video>
+    </div>
+    <div id="arContainer">
+        <a-scene embedded arjs='sourceType: webcam;'>
+            <a-marker type="pattern" url="https://raw.githubusercontent.com/AR-js-org/AR.js/master/data/data/patt.hiro" emitevents="true">
+                <a-gltf-model src="./House webAR.glb" scale="0.1 0.1 0.1" position="0 0 -5" rotation="0 0 0"></a-gltf-model>
+            </a-marker>
+            <a-entity camera></a-entity>
+        </a-scene>
+    </div>
     <script>
         document.querySelector('a-marker').addEventListener('markerFound', () => {
             const video = document.getElementById('my-video');
@@ -30,6 +47,15 @@
         document.querySelector('a-marker').addEventListener('markerLost', () => {
             const video = document.getElementById('my-video');
             video.pause();
+        });
+
+        // Debugging: Check if the model is being added to the scene
+        document.querySelector('a-marker').addEventListener('model-loaded', () => {
+            console.log('3D model loaded successfully.');
+        });
+
+        document.querySelector('a-marker').addEventListener('model-error', (evt) => {
+            console.error('Error loading 3D model:', evt.detail);
         });
     </script>
 </body>
