--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <a-scene embedded arjs>
       <!-- Assets -->
       <a-assets>
-        <a-asset-item id="3d-model" src="./BoomBox.glb"></a-asset-item>
-        <video id="video" src="./videoforar.mp4" autoplay loop></video>
+        <a-asset-item id="3d-model" src="path/to/your/model.gltf"></a-asset-item>
+        <video id="video" src="path/to/your/video.mp4" autoplay loop></video>
       </a-assets>
 
       <!-- Marker -->
@@ -18,16 +18,16 @@
         <!-- 3D Model -->
         <a-entity
           gltf-model="#3d-model"
-          scale="0.5 0.5 0.5"
-          position="-1 0 0"
+          scale="1 1 1" 
+          position="-1.5 0 0" 
         ></a-entity>
 
         <!-- Video -->
         <a-video
           src="#video"
-          width="1"
-          height="0.5"
-          position="1 0 0"
+          width="2" 
+          height="1" 
+          position="1.5 0 0" 
         ></a-video>
       </a-marker>
 
