--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <a-scene embedded arjs>
       <!-- Assets -->
       <a-assets>
-        <a-asset-item id="3d-model" src="path/to/your/model.gltf"></a-asset-item>
-        <video id="video" src="path/to/your/video.mp4" autoplay loop></video>
+        <a-asset-item id="3d-model" src="./House webAR.glb"></a-asset-item>
+        <video id="video" src="./videoforar.mp4" autoplay loop></video>
       </a-assets>
 
       <!-- Marker -->
