--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
         <a-entity
           gltf-model="#3d-model"
           scale="1 1 1" 
-          position="-1.5 0 0" 
+          position="-0.5 0 0" 
         ></a-entity>
 
         <!-- Video -->
         <a-video
           src="#video"
-          width="2" 
-          height="1" 
-          position="1.5 0 0" 
+          width="1.6" 
+          height="0.9" 
+          rotation="0 0 90"
+          position="0.5 0 0" 
         ></a-video>
       </a-marker>
 
