--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
           src="#video"
           width="1.6" 
           height="0.9" 
-          rotation="90 90 0"
-          position="0.5 0 0" 
+          rotation="0 180 90"
+          scale="-1 1 1"
+          position="0.5 0 0"
         ></a-video>
       </a-marker>
       <a-entity camera></a-entity>
